# yara2-rs

./: .travis.yml  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
examples/: basic.rs  pe.rs  proc.rs
src/: bindings.rs  callbacks.rs  errors.rs  lib.rs  libyara.rs  rule.rs  yara.rs
src/rule/: metadata.rs  mod.rs  tag.rs  yr_string.rs
tests/: data1.txt  data2.txt  file.rs  mem.rs
